  substitution.
- Add `mosquitto_sub_matches_acl()`, which can match one topic filter (a
  subscription) against another topic filter (an ACL).
- Performance: reduce memory allocations when sending packets.
- The `allow_duplicate_messages` now defaults to `true`.
- Return protocol error if a client attemps to subscribe to a shared
  subscription and also sets no-local.

Client library:
- Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
  feature that allows the network thread to be woken from select() by another
  thread when e.g.  mosquitto_publish() is called. This reduces the number of
  sockets used by each client by two.
- Add `on_pre_connect()` callback to allow clients to update
  username/password/TLS parameters before an automatic reconnection.
- Callbacks no longer block other callbacks, and can be set from within a
  callback. Closes #2127.
- Add support for MQTT v5 broker to client topic aliases.
- Add `mosquitto_topic_matches_sub_with_pattern()`, which can match against
  subscriptions with `%c` and `%u` patterns for client id / username
  substitution.
- Add `mosquitto_sub_matches_acl()`, which can match one topic filter (a
  subscription) against another topic filter (an ACL).
- Add `mosquitto_sub_matches_acl_with_pattern()`, which can match one topic
  filter (a subscription) against another topic filter (an ACL), with `%c` and
  `%u` patterns for client id / username substitution.
- Performance: reduce memory allocations when sending packets.

Clients:
- Add `-o` option for all clients loading options from a specific file.
- Add `--no-tls` option for all clients which disables all TLS options for
  that instance. This is useful for negating TLS options provided in a config
  file, or to disable the automatic use of TLS when using port 8883.
  Closes #2180.
- Add `-w`/`--watch` to mosquitto_sub which means messages will be printed on a
  fixed line number based on the topic and order in which messages were