@@ -36,6 +36,7 @@ Broker:
 - The `allow_duplicate_messages` now defaults to `true`.
 - Return protocol error if a client attemps to subscribe to a shared
   subscription and also sets no-local.
+- Log protocol version and ciphers that a client negotiates when connecting.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
